<resources>
    <string name="app_name">Share your recipes</string>
    <string name="details_name">Recipe details</string>
    <string name="no_recipes_found">Could not load, please check connection and try again</string>
    <string name="recipe_image_accessibility">Recipe Image</string>
    <string name="servings">Serves</string>
    <string name="serves">Serves</string>
    <string name="open_recipe_accessibility">Open recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_details_title">Step details</string>
    <string name="button_next_step_accessibility">Button next step</string>
    <string name="next_step">Next step</string>
    <string name="recipe_thumbnail_image_accessibility">Recipe thumbnail image</string>
    <string name="generic_recipe_image_accessibility">Generic recipe image</string>
    <string name="no_network_connection_detected">No network connection detected</string>
    <string name="no_recipe_to_display">No recipe to display</string>
    <string name="pref_recipe_key">recipe_name</string>
    <string name="prefs_recipe_key">Recipe</string>
</resources>
